--- a/wikipedia-viewer/style.css
+++ b/wikipedia-viewer/style.css
@@ -15,7 +15,8 @@ body{
 }
 
 button{
-padding-top:30px;
+
+/*padding-top:30px;*/
   position:relative;
   color:black;
   background:rgba(255,255,255,0);
