--- a/wikipedia-viewer/style.css
+++ b/wikipedia-viewer/style.css
@@ -15,8 +15,7 @@ body{
 }
 
 button{
-
-/*padding-top:30px;*/
+padding-top:20px;
   position:relative;
   color:black;
   background:rgba(255,255,255,0);
